
PIG-4028: add a flag to control the ivy resolve/retrieve output (gkesavan via daijy)

PIG-4015: Provide a way to disable auto-parallism in tez (daijy)

PIG-3846: Implement automatic reducer parallelism (daijy)

PIG-3939: SPRINTF function to format strings using a printf-style template (mrflip via cheolsoo)

PIG-3970: Merge Tez branch into trunk (daijy)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-2495: Using merge JOIN from a HBaseStorage produces an error (bridiver via daijy)

PIG-4182: e2e tests Scripting_[1-12] fail on Windows (daijy)

PIG-4235: Fix unit test failures on Windows (daijy)

PIG-4245: 1-1 edge vertices should use same jvm opts (rohini)

PIG-4252: Tez container reuse fail when using script udf (daijy)

PIG-4241: Auto local mode mistakenly converts large jobs to local mode when using with Hive tables (cheolsoo)

PIG-4184: UDF backward compatibility issue after POStatus.STATUS_NULL refactory (daijy)

PIG-4238: Property 'pig.job.converted.fetch' should be unset when fetch finishes (lbendig)

PIG-4151: Pig Cannot Write Empty Maps to HBase (daijy)

PIG-4181: Cannot launch tez e2e test on Windows (daijy)

PIG-2834: MultiStorage requires unused constructor argument (daijy)

PIG-4230: Documentation fix: first nested foreach example is incomplete (lbendig via daijy)

PIG-4199: Mapreduce ACLs should be translated to Tez ACLs (rohini)

PIG-4227: Streaming Python UDF handles bag outputs incorrectly (cheolsoo)

PIG-4219: When parsing a schema, pig drops tuple inside of Bag if it contains only one field (lbendig via daijy)

PIG-4226: Upgrade Tez to 0.5.1 (daijy)

PIG-4220: MapReduce-based Rank failing with NPE due to missing Counters (knoguchi)

PIG-3985: Multiquery execution of RANK with RANK BY causes NPE (rohini)

PIG-4218: Pig OrcStorage fail to load a map with null key (daijy)

PIG-4164: After Pig job finish, Pig client spend too much time retry to connect to AM (daijy)

PIG-4212: Allow LIMIT of 0 for variableLimit (constant 0 is already allowed) (knoguchi)
