@@ -92,6 +92,8 @@ OPTIMIZATIONS
  
 BUG FIXES
 
+PIG-4166: Collected group drops last record when combined with merge join (bridiver via daijy)
+
 PIG-2495: Using merge JOIN from a HBaseStorage produces an error (bridiver via daijy)
 
 PIG-4182: e2e tests Scripting_[1-12] fail on Windows (daijy)
